# OpenOneRec

./: setup.sh
output/: pretrain.parquet
output/split_data_pretrain_rec/: file_list.json  part-00000-of-00006.parquet  part-00001-of-00006.parquet  part-00002-of-00006.parquet  part-00003-of-00006.parquet  part-00004-of-00006.parquet  part-00005-of-00006.parquet
test/: Issues.md  SID_WORKFLOW.md  __init__.py  data_titles.py  generate_pretrain_parquet.py  pid2sid_tasks.md  split_rec_only.py  test_explain.py  test_explain_parquet.py  test_tokenizer.py  text_tokenizer_parquet.py  tokenize_parquet.py  utils.py  visualize_text_tokenizer_parquet.py
test/pretrain/: pretrain.json  pretrain_stg2.sh  pyproject.toml
verl_rl/recipe/onerec/: run_grpo.sh
